sandbox/output
TicketDispenserTest.java:14: error: cannot find symbol
        int newTicketTurnNumber = ticket.getTurnNumber();
                                  ^
  symbol:   variable ticket
  location: class TicketDispenserTest
TicketDispenserTest.java:15: error: cannot find symbol
        assertEquals(1, newTicketTurnNumber - previousTicketTurnNumber);
                                              ^
  symbol:   variable previousTicketTurnNumber
  location: class TicketDispenserTest
2 errors
